syntax = "proto3";
package dydxprotocol.vesting;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dydxprotocol/v4/x/vesting/types";

// VestingEntry specifies a Vester Account and the rate at which tokens are
// dripped into the corresponding Treasury Account.
message VestingEntry {
  // The module account to vest tokens from.
  // This is also the key to this `VestingEntry` in state.
  string vester_account = 1;

  // The module account to vest tokens to.
  string treasury_account = 2;

  // The denom of the token to vest.
  string denom = 3;

  // The start time of vesting. Before this time, no vesting will occur.
  google.protobuf.Timestamp start_time = 4;

  // The end time of vesting. At this target date, all funds should be in the
  // Treasury Account and none left in the Vester Account.
  google.protobuf.Timestamp end_time = 5;
}
